--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -2,7 +2,7 @@ name: Publish package to GitHub Packages
 on:
   workflow_dispatch:
   pull_request:
-    branches: ['master']
+    branches: ['develop']
 
 jobs:
   publish:
