--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -19,6 +19,6 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy --file mrr/pom.xml
         env:
           GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
