--- a/.github/workflows/build-local-libs.yml
+++ b/.github/workflows/build-local-libs.yml
@@ -20,10 +20,14 @@ jobs:
           distribution: 'adopt'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Publish package
+      - name: Publish Package - lib-dex-commons
         uses: gradle/gradle-build-action@v2.4.0
         with:
           arguments: publish
           build-root-directory: local_libs/lib-dex-commons
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish Package - lib-bumblebee
+        run: mvn --batch-mode deploy --file local_libs/lib-bumblebee/pom.xml
+        env:
+          GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
