--- a/local_libs/lib-bumblebee/pom.xml
+++ b/local_libs/lib-bumblebee/pom.xml
@@ -15,8 +15,6 @@
     <kotlin.version>1.7.22</kotlin.version>
   </properties>
 
-
-
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -29,9 +27,15 @@
     </dependencies>
   </dependencyManagement>
 
+  <distributionManagement>
+      <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+      </repository>
+  </distributionManagement>
 
   <dependencies>
-
     <dependency>
       <groupId>gov.cdc.hl7</groupId>
       <artifactId>hl7-pet_2.13</artifactId>
