--- a/.github/workflows/build-local-libs.yml
+++ b/.github/workflows/build-local-libs.yml
@@ -30,11 +30,11 @@ jobs:
       # - name: Publish Package - lib-bumblebee
       #   run: mvn --batch-mode deploy --file local_libs/lib-bumblebee/pom.xml
       #   env:
-      #     GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
-      # - name: Publish Package - lib-nist-validator
-      #   run: mvn --batch-mode deploy --file local_libs/lib-nist-validator/pom.xml
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish Package - lib-nist-validator
+        run: mvn --batch-mode deploy --file local_libs/lib-nist-validator/pom.xml -Dmaven.test.skip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish Package - lib-cloud-proxy
         uses: gradle/gradle-build-action@v2.4.0
         with:
