--- a/.github/workflows/build-mrr-package.yml
+++ b/.github/workflows/build-mrr-package.yml
@@ -1,23 +1,23 @@
-# name: Publish package to GitHub Packages
-# on:
-#   workflow_dispatch:
-#   pull_request:
-#     branches: ['develop']
-#   push:
-#     branches: ['develop']
-# jobs:
-#   publish:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-#       packages: write
-#     steps:
-#       - uses: actions/checkout@v3.5.0
-#       - uses: actions/setup-java@v3.10.0
-#         with:
-#           java-version: '11'
-#           distribution: 'adopt'
-#       - name: Publish package
-#         run: mvn --batch-mode deploy --file mrr/pom.xml
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
+name: Publish package to GitHub Packages
+on:
+  workflow_dispatch:
+  pull_request:
+    branches: ['develop']
+  push:
+    branches: ['develop']
+jobs:
+  publish:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v3.5.0
+      - uses: actions/setup-java@v3.10.0
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Publish Package - mrr
+        run: mvn --batch-mode deploy --file mrr/pom.xml -Dmaven.test.skip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
