Building lib-bumblebee

--- a/.github/workflows/build-local-libs.yml
+++ b/.github/workflows/build-local-libs.yml
@@ -27,10 +27,10 @@ jobs:
           build-root-directory: local_libs/lib-dex-commons
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Publish Package - lib-bumblebee
-      #   run: mvn --batch-mode deploy --file local_libs/lib-bumblebee/pom.xml
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish Package - lib-bumblebee
+        run: mvn --batch-mode deploy --file local_libs/lib-bumblebee/pom.xml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish Package - lib-nist-validator
         run: mvn --batch-mode deploy --file local_libs/lib-nist-validator/pom.xml -Dmaven.test.skip
         env:
