--- a/.github/workflows/build-local-libs.yml
+++ b/.github/workflows/build-local-libs.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Publish Package - lib-bumblebee
         run: mvn --batch-mode deploy --file local_libs/lib-bumblebee/pom.xml
         env:
-          GITHUB_TOKEN: ${{ secrets.PACKAGE_READER }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish Package - lib-nist-validator
         run: mvn --batch-mode deploy --file local_libs/lib-nist-validator/pom.xml -Dmaven.test.skip
         env:
