--- a/svc-cloud-transport/pom.xml
+++ b/svc-cloud-transport/pom.xml
@@ -23,16 +23,14 @@
 
     <repositories>
         <repository>
-            <id>central</id>
-            <url>http://repo1.maven.org/maven2/</url>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
         </repository>
         <repository>
-            <id>nexus</id>
-            <url>https://imagehub.cdc.gov/repository/maven-ede/</url>
-        </repository>
-        <repository>
-            <id>nexus-snapshot</id>
-            <url>https://imagehub.cdc.gov/repository/maven-ede-snapshot/</url>
+            <id>github-phinvad</id>
+            <name>GitHub Packages - Phinvad</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/phinvad-client</url>
         </repository>
     </repositories>
 
