Trying to fix the setup

--- a/.github/workflows/build-svc-transport.yml
+++ b/.github/workflows/build-svc-transport.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Publish Package - mrr
+      - name: Publish Package - svc-cloud-transport
         run: mvn --batch-mode deploy --file svc-cloud-transport/pom.xml -Dmaven.test.skip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
