--- a/.github/workflows/build-mrr-package.yml
+++ b/.github/workflows/build-mrr-package.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          cache: 'maven'
       - name: Publish Package - mrr
         run: mvn --batch-mode deploy --file mrr/pom.xml -Dmaven.test.skip
         env:
