--- a/fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
+++ b/fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
@@ -28,16 +28,35 @@
         <gson.version>2.9.1</gson.version>
         <junit.version>5.9.0</junit.version>
         <libdexcommon.version>1.0.5-SNAPSHOT</libdexcommon.version>
-
         <hl7pet.version>1.2.7.2</hl7pet.version>
-
     </properties>
+
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
             <groupId>gov.cdc.dex</groupId>
             <artifactId>lib-dex-commons</artifactId>
             <version>${libdexcommon.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>gov.cdc.hl7</groupId>
+            <artifactId>hl7-pet_2.13</artifactId>
+            <version>${hl7pet.version}</version>
         </dependency>
         
         <!-- Azure Functions Java Library -->
@@ -93,12 +112,6 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>gov.cdc.hl7</groupId>
-            <artifactId>hl7-pet_2.13</artifactId>
-            <version>${hl7pet.version}</version>
         </dependency>
 
     </dependencies>
