--- a/fns-hl7-pipeline/fn-mmg-based-transformer/pom.xml
+++ b/fns-hl7-pipeline/fn-mmg-based-transformer/pom.xml
@@ -29,8 +29,22 @@
         <junit.version>5.9.0</junit.version>
         <hl7pet.version>1.2.7.1</hl7pet.version>
         <libdexcommon.version>1.0.12-SNAPSHOT</libdexcommon.version>
-
     </properties>
+
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
