--- a/fns-hl7-pipeline/fn-mmg-validator/pom.xml
+++ b/fns-hl7-pipeline/fn-mmg-validator/pom.xml
@@ -30,6 +30,21 @@
         <redis.version>4.3.1</redis.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>gov.cdc.dex</groupId>
