--- a/fns-hl7-pipeline/fn-receiver-debatcher/pom.xml
+++ b/fns-hl7-pipeline/fn-receiver-debatcher/pom.xml
@@ -29,15 +29,28 @@
 
         <hl7pet.version>1.2.7.1</hl7pet.version>
         <junitjupiter.version>5.9.2</junitjupiter.version>
-
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
             <groupId>gov.cdc.dex</groupId>
             <artifactId>lib-dex-commons</artifactId>
-            <version>1.0.11-SNAPSHOT</version>
+            <version>1.0.12-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>gov.cdc.hl7</groupId>
