--- a/fns-hl7-pipeline/fn-redactor/pom.xml
+++ b/fns-hl7-pipeline/fn-redactor/pom.xml
@@ -21,6 +21,21 @@
         <lib-dex-commons.version>1.0.12-SNAPSHOT</lib-dex-commons.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.microsoft.azure.functions</groupId>
