--- a/fns-hl7-pipeline/fn-structure-validator/pom.xml
+++ b/fns-hl7-pipeline/fn-structure-validator/pom.xml
@@ -26,6 +26,21 @@
         <hl7-pet.version>1.2.7.2</hl7-pet.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Data Exchange</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
