Ignoring github action if it's not changed

--- a/.github/workflows/build-hl7-pipeline.yml
+++ b/.github/workflows/build-hl7-pipeline.yml
@@ -5,7 +5,8 @@ on:
     branches: ['develop']
   push:
     branches: ['develop']
-
+    paths:
+      - fns-hl7-pipeline/**
 jobs:
   publish:
     runs-on: ubuntu-latest
