--- a/.github/workflows/build-local-libs.yml
+++ b/.github/workflows/build-local-libs.yml
@@ -5,7 +5,8 @@ on:
     branches: ['develop']
   push:
     branches: ['develop']
-
+    paths:
+      - local_libs/**
 jobs:
   publish:
     runs-on: ubuntu-latest
