--- a/.github/workflows/build-mrr-package.yml
+++ b/.github/workflows/build-mrr-package.yml
@@ -5,6 +5,8 @@ on:
     branches: ['develop']
   push:
     branches: ['develop']
+    paths:
+      - mrr/**
 jobs:
   publish:
     runs-on: ubuntu-latest
