--- a/.github/workflows/build-svc-transport.yml
+++ b/.github/workflows/build-svc-transport.yml
@@ -5,6 +5,8 @@ on:
     branches: ['develop']
   push:
     branches: ['develop']
+    paths:
+      - svc-cloud-transport/**
 jobs:
   publish:
     runs-on: ubuntu-latest
