--- a/fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
+++ b/fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
@@ -33,7 +33,7 @@
 
     <repositories>
         <repository>
-            <id>github - data exchange hl7</id>
+            <id>github</id>
             <name>GitHub Packages - Data Exchange HL7</name>
             <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
         </repository>
