--- a/fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
+++ b/fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
@@ -38,7 +38,7 @@
             <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
         </repository>
         <repository>
-            <id>github - hl7-pet</id>
+            <id>github-cdcgov-hl7-pet</id>
             <name>GitHub Packages - HL7-pet</name>
             <url>https://maven.pkg.github.com/boris-ning-usds/hl7-pet</url>
         </repository>
