Adding a maven setting action

--- a/.github/workflows/build-hl7-pipeline.yml
+++ b/.github/workflows/build-hl7-pipeline.yml
@@ -20,35 +20,34 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: 'maven'
+      - name: maven-settings-xml-action
+        uses: whelk-io/maven-settings-xml-action@v21
+        with:
+          repositories: '[{ "id": "github-hl7-pet", "url": "https://maven.pkg.github.com/boris-ning-usds/hl7-pet" }]'
+          servers: '[{ "id": "github-hl7-pet", "username": ${{ github.actor }}, "password": ${{ secrets.GITHUB_TOKEN }} }]'
       - name: Publish Package - fn-lake-segs-transformer
         run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-lake-segs-transformer/pom.xml
         env:
-          GITHUB_USER: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Publish Package - fn-mmg-based-transformer
       #   run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-mmg-based-transformer/pom.xml
       #   env:
-      #     GITHUB_USER: ${{ github.actor }}
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Publish Package - fn-mmg-sql-transformer
       #   run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-mmg-sql-transformer/pom.xml
       #   env:
-      #     GITHUB_USER: ${{ github.actor }}
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Publish Package - fn-mmg-validator
       #   run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-mmg-validator/pom.xml
       #   env:
-      #     GITHUB_USER: ${{ github.actor }}
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Publish Package - fn-receiver-debatcher
       #   run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-receiver-debatcher/pom.xml
       #   env:
-      #     GITHUB_USER: ${{ github.actor }}
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Publish Package - fn-redactor
       #   run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-redactor/pom.xml
       #   env:
-      #     GITHUB_USER: ${{ github.actor }}
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Publish Package - fn-structure-validator
       #   run: mvn --batch-mode deploy --file fns-hl7-pipeline/fn-structure-validator/pom.xml
