--- a/.github/workflows/build-local-libs.yml
+++ b/.github/workflows/build-local-libs.yml
@@ -7,6 +7,7 @@ on:
     branches: ['develop']
     paths:
       - local_libs/**
+      - .github/workflows/build-local-libs.yml
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -22,6 +23,35 @@ jobs:
           cache: 'maven'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.6
+      - name: maven-settings-xml-action
+        uses: whelk-io/maven-settings-xml-action@v21
+        with:
+          repositories: >
+            [
+              {
+                "id": "github",
+                "name": "github data exchange hl7",
+                "url": "https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7"
+              },
+              {
+                "id": "github-hl7-pet",
+                "name": "github cdcgov hl7-pet",
+                "url": "https://maven.pkg.github.com/cdcgov/hl7-pet"
+              }
+            ]
+          servers: >
+            [
+              {
+                "id": "github",
+                "username": "${{ github.actor }}",
+                "password": "${{ secrets.GITHUB_TOKEN }}"
+              },
+              {
+                "id": "github-hl7-pet",
+                "username": "${{ github.actor }}",
+                "password": "${{ secrets.GITHUB_TOKEN }}"
+              }
+            ]
       - name: Publish Package - lib-bumblebee
         run: mvn --batch-mode deploy --file local_libs/lib-bumblebee/pom.xml -Dmaven.test.skip
         env:
