--- a/fns-hl7-pipeline/fn-mmg-sql-transformer/pom.xml
+++ b/fns-hl7-pipeline/fn-mmg-sql-transformer/pom.xml
@@ -35,8 +35,13 @@
     <repositories>
         <repository>
             <id>github</id>
-            <name>GitHub Packages - Data Exchange</name>
+            <name>GitHub Packages - Data Exchange HL7</name>
             <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+        <repository>
+            <id>github-cdcgov-hl7-pet</id>
+            <name>GitHub Packages - HL7-pet</name>
+            <url>https://maven.pkg.github.com/cdcgov/hl7-pet</url>
         </repository>
     </repositories>
     <distributionManagement>
@@ -53,7 +58,12 @@
             <artifactId>lib-dex-commons</artifactId>
             <version>${libdexcommon.version}</version>
         </dependency>
-        
+        <dependency>
+            <groupId>gov.cdc.hl7</groupId>
+            <artifactId>hl7-pet_2.13</artifactId>
+            <version>${hl7pet.version}</version>
+        </dependency>
+
         <!-- Azure Functions Java Library -->
         <dependency>
             <groupId>com.microsoft.azure.functions</groupId>
@@ -75,51 +85,37 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-messaging-eventhubs</artifactId>
             <version>${azevhub.version}</version>
         </dependency>
-
-       <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-storage-blob</artifactId>
             <version>${azstblob.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>${redis.version}</version>
         </dependency>
-        <dependency>
-            <groupId>gov.cdc.hl7</groupId>
-            <artifactId>hl7-pet_2.13</artifactId>
-            <version>${hl7pet.version}</version>
-          </dependency>
-
     </dependencies>
 
     <build>
