--- a/fns-hl7-pipeline/fn-receiver-debatcher/pom.xml
+++ b/fns-hl7-pipeline/fn-receiver-debatcher/pom.xml
@@ -34,8 +34,13 @@
     <repositories>
         <repository>
             <id>github</id>
-            <name>GitHub Packages - Data Exchange</name>
+            <name>GitHub Packages - Data Exchange HL7</name>
             <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+        <repository>
+            <id>github-cdcgov-hl7-pet</id>
+            <name>GitHub Packages - HL7-pet</name>
+            <url>https://maven.pkg.github.com/cdcgov/hl7-pet</url>
         </repository>
     </repositories>
     <distributionManagement>
