--- a/fns-hl7-pipeline/fn-redactor/pom.xml
+++ b/fns-hl7-pipeline/fn-redactor/pom.xml
@@ -24,8 +24,13 @@
     <repositories>
         <repository>
             <id>github</id>
-            <name>GitHub Packages - Data Exchange</name>
+            <name>GitHub Packages - Data Exchange HL7</name>
             <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+        <repository>
+            <id>github-cdcgov-hl7-pet</id>
+            <name>GitHub Packages - HL7-pet</name>
+            <url>https://maven.pkg.github.com/cdcgov/hl7-pet</url>
         </repository>
     </repositories>
     <distributionManagement>
@@ -37,6 +42,16 @@
     </distributionManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>gov.cdc.dex</groupId>
+            <artifactId>lib-dex-commons</artifactId>
+            <version>${lib-dex-commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>gov.cdc.hl7</groupId>
+            <artifactId>hl7-pet_2.13</artifactId>
+            <version>${hl7pet.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.microsoft.azure.functions</groupId>
             <artifactId>azure-functions-java-library</artifactId>
@@ -50,32 +65,17 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.23.4</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>gov.cdc.hl7</groupId>
-            <artifactId>hl7-pet_2.13</artifactId>
-            <version>${hl7pet.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>gov.cdc.dex</groupId>
-            <artifactId>lib-dex-commons</artifactId>
-            <version>${lib-dex-commons.version}</version>
-        </dependency>
-
-
     </dependencies>
 
     <build>
