--- a/fns-hl7-pipeline/fn-structure-validator/pom.xml
+++ b/fns-hl7-pipeline/fn-structure-validator/pom.xml
@@ -29,8 +29,13 @@
     <repositories>
         <repository>
             <id>github</id>
-            <name>GitHub Packages - Data Exchange</name>
+            <name>GitHub Packages - Data Exchange HL7</name>
             <url>https://maven.pkg.github.com/boris-ning-usds/data-exchange-hl7</url>
+        </repository>
+        <repository>
+            <id>github-cdcgov-hl7-pet</id>
+            <name>GitHub Packages - HL7-pet</name>
+            <url>https://maven.pkg.github.com/cdcgov/hl7-pet</url>
         </repository>
     </repositories>
     <distributionManagement>
@@ -42,11 +47,6 @@
     </distributionManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.10.1</version>
-        </dependency>
         <dependency>
             <groupId>gov.cdc.dex</groupId>
             <artifactId>lib-dex-commons</artifactId>
@@ -97,7 +97,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
